2008-03-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_command) src/show.c (show_command)
	src/unset.c (unset_command):  Replace overly long error messages that
	list all available options with a suggestion to use 'help'.  The long
	error messages were not being printed anyhow due to length restrictions
	in int_error().

2008-03-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.cyg: pid_t is defined in types.h.

2008-03-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/axis.h: Fixed macros AXIS_INIT2D_REFRESH and
	AXIS_UPDATE2D_REFRESH.

	* src/command.c (refresh_request): Use these macros so that the refresh
	command for volatile data works correctly for log axes (SF 1916494).

2008-03-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate.c (output_number):  Replace macro OUTPUT_NUMBER
	with a routine that can handle time format axes as well as the
	usual case.
	Bug #1880565

	* configure.in: Fix help message for --disable-fiterrvars
	Bug #1923468

2008-03-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_format): Remove superfluous c_token++.
	Bug #1922288

	* docs/gnuplot.doc: Update section on "set format".

	* docs/gnuplot.texi: Sync to today's gnuplot.doc

2008-03-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.h src/plot3d.c docs/gnuplot.doc: Add a per-plot splot
	keyword "nocontours".  This overrides the global "set contour", so
	that you can contour a single surface from a plot with many.

	* docs/Makefile.in: Note an external dependency for "make html"

2008-03-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/variable.c src/variable.c src/util.c src/util.h src/save.c:
	Make current_locale a global. Don't reset locale to "C" unnecessarily.
	Rename get_numeric_locale() to get_time_locale(), since that's what it
	really does.

	* src/wxterminal/wxt_gui.cpp (wxt_init): Restore the locale settings
	for both LC_TIME and LC_NUMERIC, but only after the GTK+ thread has